--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"lucide-svelte": "^0.546.0"
+		"lucide-svelte": "^0.546.0",
+		"svelte-dnd-action": "^0.9.65"
 	}
 }
