--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
 		"vite": "^7.1.7"
 	},
 	"dependencies": {
-		"lucide-svelte": "^0.546.0",
-		"svelte-dnd-action": "^0.9.65"
+		"@p-buddy/dockview-svelte": "^0.0.9",
+		"dockview-core": "^4.9.0",
+		"lucide-svelte": "^0.546.0"
 	}
 }
